--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-body {
+.seite {
     /* background-color:rgb(252, 234, 211); */
     /* font-size: 20px; */
-    color: rgb(252, 234, 211);
+    background-color: rgb(252, 234, 211);
     /* padding-left: 50px;
     padding-right:50px */
 }
@@ -158,4 +158,7 @@ body {
     margin-left: 10vh;
     padding-top: 10px;
 
+}
+.button-schrift1{
+    font-size: 3rem;
 }
